Fix api config and keys

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_SERVER_API=https://xcountries-backend.labs.crio.do/all
+VITE_SERVER_API=https://countries-search-data-prod-812920491762.asia-south1.run.app/countries
